<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gazebo_gz_to_ros2_simples</name>
  <version>0.0.0</version>
  <description>Contains launch files for the ros_gz_example project</description>
  <maintainer email="simoes.marco@ppgia.pucpr.br">Marco Teixeira</maintainer>
  <license>Apache 2.0</license>
  <author>Marco Teixeira</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>gz_sim_vendor</depend>

  <exec_depend>image_transport_plugins</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_image</exec_depend>
  <!-- See https://github.com/gazebosim/ros_gz/issues/40 -->
  <!--exec_depend>ros_gz_point_cloud</exec_depend-->
  <exec_depend>rqt_image_view</exec_depend>
  <exec_depend>rqt_plot</exec_depend>
  <exec_depend>rqt_topic</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>sdformat_urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

